--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,168 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  height: 65%;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  height: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(1) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-  a:nth-of-type(3) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header > nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  background-color: inherit;
+  font-size: 1.5rem;
+  font-weight: 500;
+  opacity: 0.8;
+  width: 100vw;
+  height: 100vh;
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
 }
 
-.card {
-  padding: 2em;
+nav > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+  padding-block: 10em;
 }
 
-.read-the-docs {
-  color: #888;
+a {
+  text-decoration: none;
+}
+
+main {
+  width: 100%;
+}
+
+.hero {
+  overflow: auto;
+  background: rgba(0, 0, 0, .65) url("./assets/dcc_gathering.webp") no-repeat center;
+  background-blend-mode: darken;
+  background-size: cover;
+  width: 100%;
+  height: 60vh;
+  margin-bottom: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0;
+}
+
+.hero-heading {
+  text-align: center;
+  font-size: 2.25rem;
+  color: white;
+}
+
+.text-highlight {
+  color: var(--primary-color);
+}
+
+#nav-reveal {
+  z-index: 999;
+  position: relative;
+  height: 60%;
+}
+
+#dcc-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  height: 100vh;
+  width: 100vw;
+  place-items: center;
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+  transform: translateX(-100vw);
+}
+
+.support {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 42vh);
+}
+
+.support__point {
+  display: grid;
+  grid-row: auto / span 1;
+  grid-column: 1 / -1;
+  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+}
+
+.sp__text {
+  font-size: clamp(0.875rem, 4.25vw + 0.71875rem, 3rem);
+  /*
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  */
+  /* align-items: center; */
+  /* grid-area: 2 / 5 / span 1 / span 2; */
+  /* grid-template: ; */
+}
+
+.sp__image {
+    width: 100%;
+    height: 100%;
+  /* grid-area: 2 / 1 / span 2 / span 4; */
+}
+
+.support__point:nth-child(even) > .sp__image {
+    order: 999;
+}
+
+/*
+.supporting-points > section:nth-child(even) {
+  flex-direction: row-reverse;
+}
+*/
+
+.cta {
+  background-color: var(--primary-color);
+  color: black;
+  padding: 0.5em 0.8em;
+  border: none;
+  border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 72px;
+  display: block;
+}
+
+@media screen and (min-width: 600px) {
+    .supporting-points {
+        grid-template-columns: 1fr;
+        /* grid-template-rows: repeat(9, 14vh); */
+    }
+
+    .supporting-points > div {
+        display: grid;
+        grid-row: auto / span 3;
+        grid-column: 1 / -1;
+        grid-template-columns: subgrid;
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
