--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 200px;
     gap: 20px;
+    margin-top: 1rem;
 }
 
 .footer-col {
@@ -25,8 +26,10 @@
     cursor: pointer;
 }
 
-@media (max-width:400px)  { 
+@media (max-width:480px)  { 
     .Footer {
         flex-direction: column;
+        height: fit-content;
+        margin-bottom: 2rem;
     }
 }
