--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -3,6 +3,7 @@
   --text-color: #333;
   --card-bg-color: #fff;
   --link-color: #1a73e8;
+  --spinner-color: #333;
 }
 
 [data-theme="dark"] {
@@ -10,6 +11,7 @@
   --text-color: #f5f5f5;
   --card-bg-color: #444;
   --link-color: #4da3ff;
+  --spinner-color: #f5c24f;
 }
 
 body {
