--- a/src/css/CarouselCardSkeleton.css
+++ b/src/css/CarouselCardSkeleton.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     margin: 0px 0px 0px 100px;
-    width: calc(100%-100px);
+    width: calc(100% - 100px);
     gap: 2px;
 }
 
