Fixed menu close button for mobile view

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -43,7 +43,7 @@
 .Menu {
   position: fixed;
   z-index: 2;
-  top: 0;
+  top: 100px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -78,6 +78,7 @@
 @media (min-width: 768px) {
   .Menu {
     position: fixed;
+    z-index: 2;
     top: 100px;
     left: auto;
     width: 200px;
