--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -1,9 +1,19 @@
 .Community {
-    padding: 50px;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
     width: 100%;
     min-height: 400px;
+    padding: 20px;
+}
+
+.card-wrapper {
+    display: flex;
     flex-wrap: wrap;
-    gap: 50px;
     justify-content: center;
+    gap: 50px;
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0px 10px 0px;
 }
