--- a/src/css/CommunityCard.css
+++ b/src/css/CommunityCard.css
@@ -3,8 +3,12 @@
     display: flex;
     flex-direction: column;
     width: 280px;
-    height: 350px;
+    height: 330px;
     flex-shrink: 0;
+    border-radius: 10px;
+    -webkit-box-shadow: rgba(0,0,0,0.8) 0px 0 10px;
+    -moz-box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+    box-shadow: rgba(0,0,0,0.8) 0 0 10px;
 }
 
 .cover-image {
