--- a/src/css/EditProfile.css
+++ b/src/css/EditProfile.css
@@ -112,14 +112,16 @@
     width: calc(100% - 45px);
     height: 30px;
     border-radius: 10px;
-    color: var(--text-color);
+    color: #000;
     background-color: #f5c24f;
     border: 1px solid #f5c24f;
     font-size: 18px;
+    font-weight: bold;
 }
 
 .Editprofile .error {
     color: red;
+    width: calc(100% - 45px);
 }
 
 
