--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -15,6 +15,32 @@
     gap: 5px;
 }
 
+.custom-footer-col {
+    display: grid;
+    grid-template-columns: [header] 100px [header1] 50px [header2] 50px;
+    grid-template-rows: [row1] 50px [row2] 50px [row3] 50px;
+}
+
+.section-1 {
+    grid-area: 1 / span 5;
+}
+
+.section-2 {
+    grid-area: 2 / span 2;
+}
+
+.section-3 {
+    grid-area: 2 / span 3;
+}
+
+.section-4 {
+    grid-area: 3 / 1 / 3 / 3;
+}
+
+.section-5 {
+    grid-area: 3 / 3 / 3 / 6;
+}
+
 .social-wrapper {
     display: flex;
     gap: 25px;
